# ds-vk

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  run.sh  watcher.sh
app/: main.cpp  main_2d.cpp
dans/vk/: font_atlas.cpp  font_atlas.hpp  runtime.cpp  runtime.hpp  shape_draw.hpp  stb_truetype_impl.cpp  text_draw.hpp
dans/vk/shaders/: shape_2d.frag  shape_2d.vert  text_2d.frag  text_2d.vert
docs/: architecture.md  research_notes.md
ds_vk/: assets.cpp  assets.hpp  assets_write.cpp  camera.cpp  camera.hpp  debug_draw.hpp  geometry.cpp  geometry.hpp  math.hpp  mesh.cpp  mesh.hpp  pch.hpp  runtime.cpp  runtime.hpp  types.hpp  utility.hpp
ds_vk/plugins/: manipulator.cpp  manipulator.hpp  picker.cpp  picker.hpp  viz.cpp  viz.hpp
ds_vk/shaders/: debug_line.vert  environment.frag  environment.vert  mesh.frag  mesh.vert  mesh_position_normal.vert  mesh_quantized_position_normal.vert  shadow.vert  shadow_quantized_position.vert
scripts/: validate_screenshot.py
tests/: test_main.cpp  test_runtime.cpp
